syntax = "proto3";

package proto;

option go_package = "github.com/troplet/pkg/proto";

import "proto/messages.proto";

service JobService {
  rpc ListJobes(ListJobesRequest) returns (ListJobesResponse);
  rpc LaunchJob(LaunchJobRequest) returns (stream LaunchJobResponse);
  rpc AttachJob(AttachJobRequest) returns (stream AttachJobResponse);
  rpc TerminateJob(TerminateJobRequest) returns (TerminateJobResponse);
}
